# intuit-build-challenge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
assignment_1/: README.md  blocking_queue.py  producer_consumer.py
assignment_1/.github/workflows/: test.yml
assignment_1/tests/: test_blocking_queue.py  test_producer_consumer.py
assignment_2/: README.md  data_analysis.py
assignment_2/data/: transactions.csv
assignment_2/tests/: test_data_analysis.py
